Pom.xml modified

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <version>2.1.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-
+    <!-- HELLO WORLD -->
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
